niudot-app/src/styles/tailwind.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import "./sidebar.css";

/* ================ */
/* ==== GLOBAL ==== */
/* ================ */

html, body {
	width: 100%;
	height: 100%;
	font-family: 'Nunito Sans', sans-serif;	
}

#root, #root > div {
	height: 100%;
}

/* ================ */
/* === COLORING === */
/* ================ */

/* La forma en la que funcionan estas clases es que tienen dos colores principales en el nombre, el primero indica el color que se va a tener en light theme y el segundo pues el color del dark theme. Adicionalmente se indican otras flags de las clases, como por ejemplo, si esta cambia el color del background o del texto. */ 

.bg-white-gray {
	/*Esta clase se utiliza exclusivamente para el fondo de la pagina.*/

	/*Light Theme Defaults*/
	@apply bg-white;

	/*Dark Theme Defaults*/
	@apply dark:bg-gray-cstm-0;
}

.bg-blue-blue {
	/* Este es el caracterisitica color azul de acento. Cambia ligeramente en dark mode, se hace mas oscuro, por eso la clase la verdad. Esta clase se aplica en todo lo que tenga color azul de fondo, no de texto */

	/*Global*/
	@apply text-white transition;

	/*Light Theme Defaults*/
	@apply bg-blue-500 hover:bg-blue-700;

	/*Dark Theme Defaults*/
	@apply dark:bg-blue-700 dark:hover:bg-blue-500;
}

.text-blue-blue {
	/*Esta clase es para el texto que esta en color azul, el cambio es el mismo que la clase para cambiar el fondo azul, pero pues, en text.*/

	/*Light Theme Defaults*/
	@apply text-blue-500 hover:text-blue-700;

	/*Dark Theme Defaults*/
	@apply dark:text-blue-700 dark:hover:text-blue-500;
}

.text-black-white {
	/*Es la clase que se utiliza para los headers por ejemplos o titulos pues, ya que son los textos con mayor jerarquia, y por lo tanto van en negro en light mode, y en blanco puro en dark mode. Ademas se suelen poner en bold, pero para hacer esta clase lo mas reutilizable posible se tienen que indicar explicitamente que va a ser bold cada texto.*/

	/*Global*/
	@apply transition select-none;

	/*Light Theme Defaults*/
	@apply text-black;

	/*Dark Theme Defaults*/
	@apply dark:text-white
}

.text-gray-gray {
	/*Esta clase es para texto que es secundario, como por ejemplo, descripciones de secciones o algo asi. Es bastante similar a un titulo por ejemplo, pero claro, de menor importancia.*/

	/*Global*/
	@apply transition select-none;

	/*Light Theme Defaults*/
	@apply text-gray-cstm-6;

	/*Dark Theme Defaults*/
	@apply dark:text-gray-cstm-14;
}

/* ================ */
/* == COMPONENTS == */
/* ================ */

.btn { 
	/*Global*/
	@apply h-std rounded font-bold select-none px-4;
}

.btn-border-blue {
	/*Global*/
	@apply text-white focus:outline-none focus:ring focus:text-white hover:text-white dark:focus:ring-blue-400;
}

.form-grid-layout {
	/*Esta es la clase que aplican para hacer una nueva seccion que contiene un formulario. Esa seccion que contiene las casillas de texto o lo que sea (la que las contiene a todas), ya que aca se definen las propiedades del grid.*/

	@apply mt-2 grid grid-cols-12 gap-2 max-w-2xl;
}

.form-field {
	/*Esta clase es para cada una de las input de texto o numericas o similares. Son todos esos rectangulos que en light theme tienen bordes grises claros, todas, incluidas checkboxes y dropdowns.*/

	/*Global*/
	@apply text-sm h-std p-2 rounded outline-none border-2 border-solid;

	/*Light Theme Defaults*/
	@apply text-black bg-white border-gray-200;

	/*Light Theme Pseudo-Classes*/
	@apply focus:bg-gray-100 focus:border-gray-cstm-14;

	/*Dark Theme Defaults*/
	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-1 dark:border-gray-cstm-2 placeholder-gray-cstm-10;

	/*Dark Theme Pseudo-Classes*/
	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-500;
}

.form-field-error {
	@apply border-red-500 !important;
}

.form-container-xs {
	@apply col-span-2;

	/*Responsive Settings*/
	@apply sm:col-span-6;
}

.form-container-sm {
	@apply col-span-3; 

	/*Responsive Settings*/
	@apply sm:col-span-6;
}

.form-container-md {
	@apply col-span-4;

	/*Responsive Settings*/
	@apply sm:col-span-6;
}

.form-container-lg {
	@apply col-span-6;

	/*Responsive Settings*/
	@apply sm:col-span-6;
}

.form-container-lg-mobile {
	@apply col-span-6;

	/*Responsive Settings*/
	@apply sm:col-span-12;
}

.form-container-xl {
	@apply col-span-12; 

	/*Responsive Settings*/
	@apply sm:col-span-12;
}

.form-container-xs-nl {
	@apply col-start-1 col-end-3;

	/*Responsive Settings*/
	@apply sm:col-end-6;
}

.form-container-sm-nl {
	@apply col-start-1 col-end-4;

	/*Responsive Settings*/
	@apply sm:col-end-6;
}

.form-container-md-nl {
	@apply col-start-1 col-end-5; 

	/*Responsive Settings*/
	@apply sm:col-end-7;
}

.form-container-lg-nl {
	@apply col-start-1 col-end-7; 

	/*Responsive Settings*/
	@apply sm:col-end-7;
}

.form-container-xl-nl {
	@apply col-start-1 col-end-13; 

	/*Responsive Settings*/
	@apply sm:col-end-13;
}

.alerts-container {
	@apply fixed top-20 right-4 z-10 flex flex-col items-end gap-4;
}

.alert {
	/*Estas son las alertas que van a aparecer como toast. Las genera Formik, yo solo las muestro.*/

	/*Global*/
	@apply px-4 py-3 bg-red-500 border-2 border-solid rounded  text-white font-bold border-red-700 shadow-md;
}

.table {
	/*Global*/
	@apply max-w-2xl rounded outline-none border-2 border-solid;
}

/* ================= */
/* == PRO-SIDEBAR == */
/* ================= */

.pro-sidebar {
	/*Global*/
	@apply font-bold text-white;

	/*Light Theme Defaults*/
	@apply bg-blue-500;

	/*Dark Theme Defaults*/
	@apply dark:bg-blue-700;
}

.pro-sidebar-header {
	/*Esta clase es de nombre bastante descriptivo.*/

	/*Global*/
	@apply z-10;

	/*Light Theme Defaults*/
	@apply bg-blue-500;

	/*Dark Theme Defaults*/
	@apply dark:bg-blue-700;
}

.pro-sidebar > .pro-sidebar-inner {
	/*Esta clase es para todo lo que esta en el body de la sidebar, entre el header y el footer.*/

	/*Global*/

	/*Light Theme Defaults*/
	@apply bg-blue-500;

	/*Dark Theme Defaults*/
	@apply dark:bg-blue-700;
}

.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
	/*Esta clase es para los submenus. El contenedor de los submenus si, no cada uno de las opciones.*/

	/*Light Theme Defaults*/
	@apply bg-blue-600;

	/*Dark Theme Defaults*/
	@apply dark:bg-blue-500;

}

.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul > li {
	@apply bg-blue-600;
}

.pro-menu-item > .pro-inner-item > .pro-item-content {
	/*Esta clase maneja todo lo que es texto en cada uno de los elementos de la lista de links en el sidebar. Todos, incluidos los que estan en submenus.*/

	/*Global*/
	@apply text-base hover:underline break-words;
}

.table-field {
	/*Esta clase es para cada una de las input de texto o numericas o similares. Son todos esos rectangulos que en light theme tienen bordes grises claros, todas, incluidas checkboxes y dropdowns.*/

	/*Global*/
	@apply text-sm h-std p-2 rounded outline-none border-2 border-solid;

	/*Light Theme Defaults*/
	@apply text-black bg-white border-gray-200;

	/*Light Theme Pseudo-Classes*/
	@apply focus:bg-gray-100 focus:border-gray-cstm-14;

	/*Dark Theme Defaults*/
	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-1 dark:border-gray-cstm-12 placeholder-gray-cstm-10;

	/*Dark Theme Pseudo-Classes*/
	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-500;
}

.table thead th {
	@apply align-bottom border-b-2;

	@apply border-gray-200;

	@apply dark:border-gray-cstm-12;
}

